--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,2 @@
-/WordFrequencyTest$1.class
-/WordFrequencyTest.class
-/jsoup-1.12.1.jar
-/WordFrequencyFinder.class
-/WordFrequencyFinder$1.class
-/Word.class
-/AlertBox.class
+/WordFrequencyUI.class
+/WordTest.class
